[package]
name = "minllm"
version = "0.1.1"
edition = "2021"
authors = ["Aidan"]
description = "MinLLM - A minimalist LLM framework implemented in Rust with Python bindings"
license = "MIT"
repository = "https://github.com/AAxiom-org/MinLLM"

[lib]
name = "minllm"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
futures = "0.3"
log = "0.4"
thiserror = "1.0"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tokio-test = "0.4"

[features]
default = ["python"]
python = ["pyo3", "pyo3-asyncio"]

[dependencies.pyo3]
version = "0.20"
features = ["extension-module", "anyhow", "abi3-py38"]
optional = true

[dependencies.pyo3-asyncio]
version = "0.20"
features = ["tokio-runtime"]
optional = true
