[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "minllm"
version = "0.1.0"
description = "MinLLM - A minimalist LLM framework implemented in Rust"
authors = [
    {name = "Aidan", email = "example@example.com"},
]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"] 