[build-system]
requires = ["maturin>=1.3,<2.0"]
build-backend = "maturin"

[project]
name = "minllm"
description = "A workflow orchestration library for Python, implemented in Rust"
authors = [
    {name = "MinLLM Authors", email = "example@example.com"}
]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.maturin]
features = ["python"]
python-source = "python"
module-name = "minllm._minllm"

[project.optional-dependencies]
dev = ["pytest>=6.0.0", "pytest-asyncio"] 